[package]
authors = [
    "Karl Whitford <venirelabsinc@gmail.com>",
    "Josh Leder <slushie@gmail.com>",
    "'The lone gunman' <whtcorpsinc> <whtcorpsarpanet@gmail.com>"
]

name = "einsteindb"
license = "Apache-2.0"
keywords = ["embedded", "distributed-systems", "BFTRaft" ]
version = "0.4.1"
build = "build/version.rs"
edition = "2018"
publish = "false"

[workspace]
members =[
"cmd", 
"einsteindb",
"einsteindb-gen,"
"einsteindb-sys",
]

[profile.release]
debug = true