[package]
name = "einsteindb-ctl"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[dependencies]
backup = { path = "../../components/backup", default-features = false }
cdc = { path = "../../components/cdc", default-features = false }
chrono = "0.4"
crossbeam = "0.8"
tempfile = "3.0"
clap = "3.0.9"
structopt = "0.3"
concurrency_manager = { path = "../../components/concurrency_manager", default-features = false }
encryption_export = { path = "../../components/encryption/export", default-features = false }
embedded_engine_rocks = { path = "../../components/embedded_engine_rocks", default-features = false }
embedded_engine_traits = { path = "../../components/embedded_engine_traits", default-features = false }
error_code = { path = "../../components/error_code", default-features = false }
file_system = { path = "../../components/file_system", default-features = false }
futures = "0.3"
ekvproto = { git = "https://github.com/pingcap/ekvproto.git" }
tokio = { version = "1.5", features = ["rt-multi-thread", "time"] }
gag = "1.0"
grpcio = { version = "0.9",  default-features = false, features = ["openssl-vendored", "protobuf-codec"] }
hex = "0.4"
keys = { path = "../../components/keys", default-features = false }
libc = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
log_wrappers = { path = "../../components/log_wrappers" }
nix = "0.23.1"
fidel_client = { path = "../../components/fidel_client", default-features = false }
prometheus = { version = "0.13", features = ["nightly"] }
promptly = "0.3.0"
protobuf = { version = "2.8", features = ["bytes"] }
violetabft = { version = "0.6.0-alpha", default-features = false, features = ["protobuf-codec"] }
violetabft_log_embedded_engine = { path = "../../components/violetabft_log_embedded_engine", default-features = false }
violetabftstore = { path = "../../components/violetabftstore", default-features = false }
rand = "0.8"
regex = "1"
security = { path = "../../components/security", default-features = false }
serde_json = "1.0"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
server = { path = "../../components/server" }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
einsteindb = { path = "../../", default-features = false }
einsteindb_alloc = { path = "../../components/einsteindb_alloc" }
einsteindb_util = { path = "../../components/einsteindb_util", default-features = false }
collections = { path = "../../components/collections" }
toml = "0.5"
txn_types = { path = "../../components/txn_types", default-features = false }

[build-dependencies]
time = "0.3.5"

[target.'cfg(unix)'.dependencies]
signal = "0.7.0"